<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/chat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">
        <ImageView
            android:id="@+id/icon1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon1"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:id="@+id/name_sms1"
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/first_person"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sms1"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="9dp"
            android:text="@string/sms_send_time"
            android:fontFamily="@font/poppins_regular"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ACA5A5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/chat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">
        <ImageView
            android:id="@+id/icon2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon2"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:id="@+id/name_sms2"
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/second_person"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sms2"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="9dp"
            android:text="@string/sms_send_time"
            android:fontFamily="@font/poppins_regular"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ACA5A5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/chat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">
        <ImageView
            android:id="@+id/icon3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon3"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:id="@+id/name_sms3"
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/third_person"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sms_3"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="9dp"
            android:text="@string/sms_send_time"
            android:fontFamily="@font/poppins_regular"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ACA5A5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/chat4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">
        <ImageView
            android:id="@+id/icon4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon4"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:id="@+id/name_sms4"
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/fourth_person"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sms4"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="9dp"
            android:text="@string/sms_send_time"
            android:fontFamily="@font/poppins_regular"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ACA5A5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/chat5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">
        <ImageView
            android:id="@+id/icon5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon5"
            android:layout_margin="5dp" />

        <LinearLayout
            android:id="@+id/name_sms5"
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/fifth_person"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sms5"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="9dp"
            android:text="@string/sms_send_time"
            android:fontFamily="@font/poppins_regular"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ACA5A5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:id="@+id/chat6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">
        <ImageView
            android:id="@+id/icon6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon6"
            android:layout_margin="5dp" />

        <LinearLayout
            android:id="@+id/name_sms6"
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sixth_person"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sms6"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="9dp"
            android:text="@string/sms_send_time"
            android:fontFamily="@font/poppins_regular"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ACA5A5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>